<resources>
    <string name="app_name">EjemploFragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Batmanname">Batman</string>
    <string name="Batman_alias">Bruce wayne</string>
    <string name="Batman_powre">\nexceptional martial artist, combat strategy, inexhaustible wealth, brilliant deductive skill, advanced technology</string>
    <string name="flash_power">super speed, intangibility, superhuman agility, time travel, creates and controls lightning, multiversal knowledge</string>
    <string name="Flash_name">Flash</string>
    <string name="Flash_alias">Barry Allen, Jay Garrick, Wally West</string>
    <string name="Superman_name">Superman</string>
    <string name="Superman_alias">Clark Kent, Kal-El</string>
    <string name="Supermanpowers">super strength, flight, invulnerability, super speed, heat vision, freeze breath, x-ray vision, superhuman hearing, healing factor</string>
    <string name="Wonderwoman_name">Wonderwoman</string>
    <string name="Wonderwoman_alias">Diana Prince</string>
    <string name="Wonderwoman_powers">super strength, invulnerability, flight, combat skill, combat strategy, superhuman agility, healing factor, magic weaponry</string>
    <string name="title_activity_botton_navigation">BottonNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="superheroes">Superheroes</string>
    <string name="masterdetailactivity">Master detail activity</string>
    <string name="navigationdrawel">Navigation Drawel</string>
    <string name="bottonnavigation">Botton navigation</string>
    <string name="tabbed">Tabbed</string>
</resources>