<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_batman">
    <fragment
        android:id="@+id/navigation_batman"
        android:name="com.santo.ejemplofragment.ui.batman.BatmanFragment"
        android:label="@string/Batmanname"
        tools:layout="@layout/fragment_batman" />
    <fragment
        android:id="@+id/navigation_flash"
        android:name="com.santo.ejemplofragment.ui.flash.FlashFragment"
        android:label="@string/Flash_name"
        tools:layout="@layout/fragment_flash" />
    <fragment
        android:id="@+id/navigation_superman"
        android:name="com.santo.ejemplofragment.ui.superman.SupermanFragment"
        android:label="@string/Superman_name"
        tools:layout="@layout/fragment_superman" />
    <fragment
        android:id="@+id/navigation_wonder_womn"
        android:name="com.santo.ejemplofragment.ui.wonderwoman.WonderWomnFragament"
        android:label="@string/Wonderwoman_name"
        tools:layout="@layout/fragment_wonder_womn_fragament" />
</navigation>